buttonデザイン変更,ogp変更

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/ogp-sofa-mystery.png" />
+    <link rel="icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Mystery Walk" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp-sofa-mystery.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <title>ソファ謎</title>
   </head>
   <body>
