サイトタイトル変更

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Mystery Walk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
-    <title>ソファ謎</title>
+    <title>tabinazo</title>
   </head>
   <body>
-    <noscript>ソファで解く、世界の謎</noscript>
+    <noscript>tabinazo</noscript>
     <!-- ここから下のフォームUIを削除して#rootだけにします -->
     <div id="root"></div>
   </body>
