--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <meta name="description" content="Mystery Walk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <title>tabinazo</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600&family=Cormorant+Garamond:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
   </head>
   <body>
     <noscript>tabinazo</noscript>
