トップページの文章修正,OGP設定

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Mystery Walk" />
+    <meta name="description" content="短時間で楽しめるひらめき系の謎解きサイト TABINAZO。Instagram と note の問題に対応し、正解すると番号つき賞状が表示されます。" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <title>tabinazo</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600&family=Cormorant+Garamond:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:title" content="TABINAZO - 謎解き回答サイト" />
+    <meta property="og:description" content="正解すると番号つき賞状を発行する謎解きサイト。" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogp-tabinazo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mystery-city-a3b49.web.app/" />
 
   </head>
   <body>
