--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    
     <meta name="description" content="短時間で楽しめるひらめき系の謎解きサイト TABINAZO。Instagram と note の問題に対応し、正解すると番号つき賞状が表示されます。" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp-tabinazo.png" />
     <title>tabinazo</title>
@@ -17,7 +18,8 @@
     <meta property="og:image" content="%PUBLIC_URL%/ogp-tabinazo.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mystery-city-a3b49.web.app/" />
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6440337299998986"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>tabinazo</noscript>
